# Vapor

./: README.md  deployed_addresses.env  development_status.md  mvp_setup.sh
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: blockchain.rs  config.rs  database.rs  main.rs  merkle.rs  models.rs
backend/src/abi/: CashLinkBridge.json  IProofVerifier.json  IProofVerifier_abi.json  IVaporBridge.json  IVaporBridge_abi.json  ProofVerifier.json  ProofVerifier_abi.json  VaporBridge.json  VaporBridge_abi.json
backend/src/api/: batch.rs  fillers.rs  health.rs  mod.rs  orders.rs  proofs.rs  relayer.rs  tests.rs
backend/src/lib/: sparse_merkle_tree.rs
backend/src/services/: batch_processor.rs  matching_engine.rs  mod.rs  mvp_prover.rs  order_service.rs  relayer.rs
contracts/: README.md  deployed_addresses.env  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: CashlinkBridge.sol  MockUSDC.sol  ProofVerifier.sol  VaporBridge.sol
contracts/src/interfaces/: ICashlinkBridge.sol  IProofVerifier.sol  IVaporBridge.sol
contracts/test/: CashlinkBridge.t.sol  ProofVerifier.t.sol  VaporBridge.t.sol
frontend/: .gitignore  PRIVY_SETUP.md  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navigation.tsx  PrivyProvider.tsx
frontend/src/hooks/: usePyusd.ts
frontend/src/lib/: contracts.ts
scripts/: README.md  advanced_e2e_test.sh  e2e_test_1.sh  happy_path.sh  seed.sh  start_anvil_only.sh  start_backend_only.sh  start_dev_environment.sh  start_frontend_only.sh
(+8 files in other folders)
