[package]
name = "cashlink-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cashlink-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Crypto and blockchain
ethers = "2.0"
web3 = { version = "0.19", default-features = false, features = ["http-rustls-tls", "signing"] }
rand = "0.8"

# Merkle trees
rs_merkle = "1.4"
hex = "0.4"
sha3 = "0.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"

# Config
config = "0.14"

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
